v2.2
se agrega un atajo para desactivar los sonidos temporalmente: alt shift p.
se separa las teclas en un archivo indepentiende para en un futuro trabajar en un editor de combinaciones.
(programadores): se quita keyboard para reemplazarla por keyboard_handler.
se cambia la combinación para silenciar un mensaje entrante con sapi5: control p.
agregado atajo para borrar los buffers de búsquedas y el buffer de favoritos:  alt shift d
ahora es posible buscar mensajes por palabra o nombre de autor. se creará un buffer con el término de la búsqueda ingresada donde contendrá todas las coinsidencias (alt shift s)
v2.1
ahora se muestran los mensajes del propietario del canal.
ahora puedes escoger ciertos sonidos habilitados desde la configuración del programa.
VeTube ya no permite tener 2 instancias abiertas
ahora puedes habilitar y desabilitar las  categorías desde la configuración del programa
se corrige el bug de que se añadiera un enlace a favoritos el número de favoritos que tuvieras.
si cambias a las diversas categorías el modo automático solo leerá los mensajes de dicha categoría.
se agrega un atajo de teclado para destacar un mensaje, el mismo se irá a la categoría  de favoritos (se creará si no la tienes): alt shift f
se añaden categorías por mensajes, estas son: miembros, donativos, moderadores, usuarios verificados, y favoritos.
se corrige el no poder iniciar el chat automáticamente si no se consigue el título o las views de un envivo.
v2.0
se agrega twitch a la lista de streams soportados.
se corrige un bug el cual podía hacer que el programa se cerraba si es que tenías sapy o lector leyendo el chat.
se agrega una sección de favoritos, podrás guardar algún envivo que te  guste para poder repetir el chat cuantas veces gustes.
se agrega portugués a los  idiomas traducidos, gracias eternal legend
se aregla el cargar los idiomas correctamente.
V1.2.1
(programadores): se quita webbrowser para reemplazarlo por funciones nativas de wx-python. gracias hector