@@ -1,67 +1,0 @@
-Read and manage youtube and Twitch  chats in an accessible way on your own live shows or those of your favorite creators.
-## Features
-
-- Automatic mode: Read incoming  chat messages in real time using your preferred sapi5 voice
-- Invisible interface: Manage chats from any window using simple key commands. It is necessary to have an active screen reader.
-
-- Supported screen readers:
-  - NVDA
-  - JAWS
-  - Window-Eyes
-  - SuperNova
-  - System Access
-  - PC Talker
-  - ZDSR
-- Possibility to customize and configure according to the user's needs.
-- activate or deactivate program sounds
-- Turn automatic mode on or off.
-- configure the list of messages in the invisible interface.
-- Set the preferences of the sapi voice.
-- change the reading mode for chats easily: decide if you want to read all the chats or only members and donations.
-- Save your live streams on a favourites section; repeat the chat as many times as you like without trying to get the link again.
-
-## Keyboard shortcuts.
-
-### Using an invisible interface.
-|action |key combination |
-| ------------------------- | ------------- |
-|interrupts sapi speech| control |
-|Cycles between different buffers including all chats or only members and donations | alt shift left or right arrow |
-|Jump to Previous item | alt shift up arrow |
-|Jump to Next item | alt shift down arrow |
-|Jump to First item | alt shift home |
-|Jump to Last item | alt shift end |
-|Copy the current message | alt shift c |
-|Toggle on or off automatic mode  | alt shift m |
-|Show the current message in a text box |alt shift v |
-|Add a message to the favourites buffer | Alt Shift F |
-### In the chat history:
-|action |key combination |
-| ------------------------- | ------------- |
-|Play the  selected message |space
-| Erase the  selected message      | Delete |
-
-
-###In the favourites section:
-|action |key combination |
-Go to a selected link      | space            |
-| Erase the selected link                 | delete.
-
-# Aknoledgements::
-I'd like to thank the following people:
-
-[4everzyanya](https://www.youtube.com/c/4everzyanya/),
-the main Beta tester for the project.
-
-[Johan G](https://github.com/JohanAnim),
-Who took part on the creation of the graphic design for the project and fixed minor buggs.
-
-I'm quite sure that thanks to you guys  this application will keep on improving and each and every one of your ideas and collaborations will be added  to this project.
-
-For ideas, buggs found or any suggestions you can drop me a line at 
-cesar.verastegui17@gmail.com
-## Download links.
-With your support, you contribute  for this program to keep on growing.
-
-[Want to join our cause?[(https://www.paypal.com/donate/?hosted_button_id=5ZV23UDDJ4C5U)
-[Download the program here](https://github.com/metalalchemist/VeTube/releases/download/v1.2/vetube1.zip)
