@@ -1,0 +1,1 @@
+{"current_version": "2.2", "description": "Agregada posibilidad de desactivar búsqueda de actualizaciones, agregado un buscador de palabras y un atajo para desactivar los sonidos. mas info en el changelog.", "downloads": {"Windows32": "https://github.com/metalalchemist/VeTube/releases/download/v2.1/vetube32v2.1.zip", "Windows64": "https://github.com/metalalchemist/VeTube/releases/download/v2.1/vetube64v2.1.zip"} }
